some idea how to get cmd in new struct

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,27 @@
 			"name": "gcc - Build and debug active file",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "/Users/amorcill/42-Minishell/minishell",
+			"program": "/home/x250/42-Heilbronn/42Minishell/minishell",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
 			"externalConsole": false,
-			"MIMode": "lldb",
-			// "preLaunchTask": "C/C++: gcc build active file"
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			],
+			//"preLaunchTask": "C/C++: gcc build active file",
+			"miDebuggerPath": "/usr/bin/gdb"
 		}
 	]
 }
