--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: annarohmnn <annarohmnn@student.42.fr>      +#+  +:+       +#+         #
+#    By: arohmann <arohmann@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/23 12:57:35 by amorcill          #+#    #+#              #
-#    Updated: 2022/02/06 13:57:22 by annarohmnn       ###   ########.fr        #
+#    Updated: 2022/02/07 12:28:48 by arohmann         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,6 @@ SRCS = 	ft_atoi.c		ft_isalnum.c    ft_isdigit.c    ft_lstnew.c     ft_memcmp.c  
 		ft_isascii.c    ft_itoa.c       ft_memchr.c     ft_memmove.c    ft_putendl_fd.c ft_split.c \
 		ft_striteri.c   ft_strlcpy.c    ft_strncmp.c    ft_strtrim.c    ft_toupper.c 	ft_atoi_ext.c \
 		ft_strcmp.c \
-
 		get_next_line.c get_next_line_utils.c \
 		ft_printf.c    ft_printf_d.c  ft_printf_p.c  	ft_printf_arg.c  ft_printf_s.c  ft_printf_hex.c\
 		ft_printf_u.c \
